--- a/EFCodeFirstSample.Negocios/EFCodeFirstSample.Negocios.csproj
+++ b/EFCodeFirstSample.Negocios/EFCodeFirstSample.Negocios.csproj
@@ -43,11 +43,12 @@
     <Compile Include="Entidades\Autor.cs" />
     <Compile Include="Entidades\Categoria.cs" />
     <Compile Include="Entidades\Emprestimo.cs" />
-    <Compile Include="Entidades\Entidade.cs" />
+    <Compile Include="Entidades\Entity.cs" />
     <Compile Include="Entidades\Exemplar.cs" />
     <Compile Include="Entidades\Livro.cs" />
     <Compile Include="Entidades\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\IRepository.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
